examples/invalid_feature_secret/secret_value_present.argx
module invalid.secret_value_present
provider OpenAI { kind external enabled false dry_run_only true requires feature_flag requires approval }
secret S { handle "OPENAI_API_KEY" provider OpenAI scope adapter access denied source none value "sk-secret" }
